--- a/code-along/src/index.css
+++ b/code-along/src/index.css
@@ -1,22 +1,19 @@
-
-*{
+* {
   margin: 0;
   padding: 0;
 }
 
-body{
-  background-color: #ffdeca;
+body {
+  background-color: darkturquoise;
 }
 
-h1{
+h1 {
   text-align: center;
   margin: 20px;
   color: #2c1203;
   text-transform: uppercase;
   text-decoration: underline;
-
 }
-
 
 .container {
   display: flex;
@@ -26,11 +23,23 @@ h1{
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin: 20px auto;
   max-width: 300px;
   background: coral;
+  border-radius: 2px;
   box-shadow: 3px 2px 3px silver;
   transition: all 0.3s ease-in-out;
+}
+.cardContent {
+  height: 300px;
+}
+.bioWrap {
+  color: whitesmoke;
+  margin: 15px;
+  text-align: justify;
 }
 
 .card:hover {
